--- a/AdKompaign/config/packages/nelmio_cors.yaml
+++ b/AdKompaign/config/packages/nelmio_cors.yaml
@@ -9,7 +9,7 @@ nelmio_cors:
         allow_credentials: false
     paths:
         '^/api':
-            allow_origin: ['*']
+            allow_origin: ['%env(FRONTEND_URL)%', 'http://localhost:3000', 'https://localhost:3000']
             allow_headers: ['Content-Type', 'Authorization', 'Accept', 'Origin', 'X-Requested-With']
             allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
-            allow_credentials: false
+            allow_credentials: true
